# pwmp-stack

./: .gitignore  Cargo.toml  README.md
.sqlx/: query-513da2a308934da94712436e136472c9fef438e9a5c3a07e8031cba4b18869ae.json  query-6259e187dedd9aa4d3b01706a9cf8a75345dcc7e63d325b5a26b7d1aaa274c6e.json  query-a45d81871dafcfe91a9ed3a0a1cf7b9719f6b3659b6b5b093659fe84e2372a5b.json  query-ab3c39bc87c5a5bf88ea2668b7ff82d22ba66b04bb7d4f97860d08d473fb1a25.json
db/: create_schema.sql
pwmp-client/: Cargo.toml  README.md
pwmp-client/examples/: get_datetime.rs  get_setting.rs  get_settings.rs  ping.rs  post_measurements.rs
pwmp-client/src/: error.rs  lib.rs
pwmp-server/: Cargo.toml  README.md
pwmp-server/queries/: create_notification.sql  get_device_by_mac.sql  post_results.sql  post_stats.sql
pwmp-server/src/: cli.rs  client.rs  client_handle.rs  config.rs  db.rs  error.rs  main.rs  server_handle.rs
pwmp-server/src/server/: client_handle.rs  config.rs  db.rs  mod.rs  rate_limit.rs  server_handle.rs
pwmp-server/src/svcmgr/: mod.rs  openrc.rs  systemd.rs  traits.rs
pwmp-server/src/svcmgr/templates/: systemd.service
pwmp-server/src/tester/: mod.rs
pwmp-types/: Cargo.toml  README.md
pwmp-types/src/: aliases.rs  datetime.rs  decimal.rs  lib.rs  mac.rs  multitype.rs  request.rs  response.rs  setting.rs
pwmp-types/tests/: decimal.rs  mac.rs  simple.rs
