[package]
name = "pwmp-server"
version = "1.0.4"
edition = "2021"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
log = { version = "0.4.20", features = ["std"] }
simple_logger = { version = "4.3.0", features = ["stderr", "threads"] }
pwmp-types = { path = "../pwmp-types" }
sqlx = { version = "0.7.3", default-features = false, features = [
    "postgres",
    "runtime-tokio",
    "migrate",
    "macros",
    "bigdecimal",
] }
confy = { version = "0.5.1", default-features = false, features = [
    "yaml_conf",
] }
serde = { version = "1.0.193", features = ["derive"] }
homedir = "0.2.1"
tokio = { version = "1.35.1", default-features = false, features = [
    "rt-multi-thread",
] }
always_cell = "0.1.0"
time = { version = "0.3.31", default-features = false, features = ["macros"] }
thiserror = "1.0.51"
users = { version = "0.11.0", default-features = false }
